Added router open api
